# src/routes/service.routes.js
@@ -7,5 +7,8 @@ router.post('/create', authRequired, ctrl.uploadServiceImage, ctrl.createService
 router.get('/seller/:sellerId', ctrl.listBySeller);
 router.get('/:id', ctrl.getService);
 router.delete('/:id', authRequired, ctrl.removeService);
+router.patch('/:id/services-offered', authRequired, ctrl.updateServicesOffered);
+router.patch('/:id/working-hours', authRequired, ctrl.updateWorkingHours);
+router.patch('/:id/reviews', authRequired, ctrl.updateReviews);
 
 module.exports = router;
